[project]
name = "vaultctl"
version = "0.2.2"
description = "vaultctl is a command-line interface (CLI) tool designed to facilitate operations with HashiCorp Vault."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "d4rkfella", email = "georgi.panov@darkfellanetwork.com" }
]
requires-python = ">=3.14,<4.0"
dependencies = [
    "typer==0.26.7",
    "validators==0.35.0",
    "hvac==2.4",
    "cryptography==48.0.1",
    "python-dateutil==2.9.0",
    "boto3==1.43.32",
    "botocore[crt]",
]

[project.scripts]
vaultctl = "vaultctl.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vaultctl"]

[dependency-groups]
dev = [
    "types-hvac==2.4.0.20260610",
    "mypy-boto3-s3==1.43.14",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "D211",
    "D213",
    "D203",
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "typing.Annotated", 
    "typing_extensions.Annotated"
]

runtime-evaluated-decorators = [
    "typer.Typer.command",
    "typer.Typer.callback"
]
